# projection

./: CMakeLists.txt  budgetMaintenance.cpp  budgetMaintenance.h  kernel.h  loadData.cpp  loadData.h  main.cpp  solver.cpp  solver.h  svm.h
